fix list alignment inside columns

--- a/src/resources/formats/revealjs/quarto.scss
+++ b/src/resources/formats/revealjs/quarto.scss
@@ -381,16 +381,16 @@ $panel-sidebar-padding: 0.5em;
   font-size: calc(#{$revealjs-h3-font-size} / #{$presentation-font-smaller});
 }
 
-.reveal .columns > .column > * {
+.reveal .columns > .column > :not(ul, ol) {
   margin-left: 0.25em;
   margin-right: 0.25em;
 }
 
-.reveal .columns > .column:first-child > * {
+.reveal .columns > .column:first-child > :not(ul, ol) {
   margin-right: 0.5em;
   margin-left: 0;
 }
-.reveal .columns > .column:last-child > * {
+.reveal .columns > .column:last-child > :not(ul, ol) {
   margin-right: 0;
   margin-left: 0.5em;
 }
